  modifying their CMake project. The current imported target names will be
  removed from the 2.0 release, and should not be used for
  forward-compatibility.

  Programs that link to BSON libraries directly should also use the new target
  names `bson::static`, `bson::shared`, or `bson::bson`.


Unreleased (2.0.0)
==================

## Changes

* Passing `batchSize:0` as an option to `mongoc_client_watch`, `mongoc_database_watch`, or `mongoc_collection_watch`
  now applies `batchSize:0` to the `aggregate` command. Useful to request an immediate cursor. Previously the value
  was ignored.
* `bson_oid_init_sequence` is removed. Use `bson_oid_init` instead.
* `mongoc_server_description_host` changes the return type from `mongoc_host_list_t *` to `const mongoc_host_list_t *`.
* URI authentication credentials validation (only applicable during creation of a new `mongoc_uri_t` object from a connection string):
  * The requirement that a username is non-empty when specified is now enforced regardless of authentication mechanism.
  * Username and password specification requirements are now validated and returns a client error for the specified authentication mechanism.
    * e.g. it is a client error to not specify a username or a password for SCRAM-SHA-1, SCRAM-SHA-256, and PLAIN.
    * e.g. it is a client error to specify a password for MONGODB-X509.
    * e.g. it is a client error to specify a username or a password without the other for MONGODB-AWS.
  * `authSource` is now correctly defaulted to `"$external"` for MONGODB-AWS (instead of the database name or `"admin"`).
  * `authMechanism` is now validated and returns a client error for invalid or unsupported values.
  * `authMechanismProperties` is now validated and returns a client error for invalid or unsupported properties for the specified authentication mechanism.
  * `authMechanismProperties` now correctly supports `':'` within property values.